--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,13 @@
         "destination": "/index.html"
       }
     ]
+
+    "headers": [ {
+      "source": "404.html",
+      "headers": [ {
+        "key": "Cache-Control",
+        "value": "max-age=300"
+      } ]
+    } ]
   }
 }
