--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,9 @@
       "**/node_modules/**"
     ],
 
+    "cleanUrls": true,
+    "trailingSlash": false,
+
     "headers": [ {
       "source": "404.html",
       "headers": [ {
