--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .DS_Store
 
+# Ignore any generated different-sized images
+*.large
+*.thumb
+
 # ========================= Firebase stuff ========================
 
 # Logs
